# lapsus-svn

asus_oled/tags/0.02/: README  asus_oled.c
asus_oled/tags/0.03/: Makefile  asus_oled.c
asus_oled/trunk/: Makefile  README  asus_oled.c
asus_oled/trunk/qt/: main.cpp
asus_oled/trunk/tool/: README  main.cpp
tags/0.0.2/: INSTALL  configure.in.in
tags/0.0.2/client/: Makefile.am  applet_conf.cpp  colorwidget.ui  ldbus.cpp  switch.h
tags/0.0.2/daemon/: Makefile.am  lapsus_daemon.cpp  sys_backend.cpp  sys_backend.h
tags/0.0.2/dbus-qt4-qt3backport/: qdbusintegrator.cpp
tags/0.0.2/dbus-qt4-qt3backport/dbus/: qdbuserror.h
tags/0.0.2/global/: lapsus.h  lapsus.xml
tags/0.0.3/: ChangeLog  Makefile.am  lapsus.conf
tags/0.0.3/client/: action_button.h  applet.cpp  applet.h  flowlayout.cpp  ksmallslider.cpp  lapsus_icons.cpp  panel_default.cpp  panel_slider.cpp  panel_slider.h  panel_widget.cpp
tags/0.0.3/client/pics/: Makefile.am
tags/0.0.3/daemon/: lapsus_daemon.cpp  lapsus_daemon.h  lapsus_dbus.h  sys_asus.cpp  sys_backend.cpp  sys_backend.h
tags/0.0.3/dbus-qt4-qt3backport/: Makefile.am
tags/0.0.3/dbus-qt4-qt3backport/dbus/: qdbusobjectpath.h
tags/0.0.4/: AUTHORS  ChangeLog  README
tags/0.0.4/client/: Makefile.am  action_button.h  flowlayout.h  lapsus_dbus.cpp  lapsus_icons.cpp  lapsus_icons.h  osd.cpp  panel_default.h  panel_main.cpp  panel_slider.cpp  panel_widget.h
tags/0.0.4/daemon/: Makefile.am  alsa_mixer.cpp  lapsus_daemon.cpp  lapsus_daemon.h  synaptics.h  sys_asus.h  sys_backend.cpp  sys_backend.h  sys_generic.h  sys_ibm.cpp
tags/0.0.4/dbus-qt4-qt3backport/dbus/: qdbusdata.h
tags/0.0.4/po/: pl.po
tags/0.0.5/: ChangeLog  INSTALL  README
tags/0.0.5/client/: Makefile.am  action_button.cpp  applet.cpp  conf_dialog.h  feature_manager.h  flowlayout.cpp  flowlayout.h  ksmallslider.cpp  lapsus_conf.cpp  lapsus_conf.h  lapsus_dbus.h  lapsus_icons.cpp  lapsus_icons.h  lapsus_slider.cpp  lapsus_vol_slider.h  list_item.cpp  osd.h  panel_button.cpp  panel_default.cpp  panel_default.h  panel_main.cpp  panel_main.h  panel_slider.cpp  panel_vol_slider.cpp  panel_vol_slider.h  panel_widget.h
tags/0.0.5/daemon/: acpi_event_parser.cpp  acpi_event_parser.h  alsa_mixer.cpp  lapsus_config.cpp  lapsus_config.h  lapsus_daemon.cpp  lapsus_daemon.h  lapsus_mixer.h  lapsus_module.cpp  lapsus_module.h  lapsus_save.h  sys_asus.cpp  sys_asus.h  sys_backend.cpp  sys_ibm.cpp
tags/0.0.5/global/: lapsus_validator.cpp
tags/0.0.5/po/: Makefile.am
tags/0.0.6/client/: action_button.cpp  action_button.h  applet.cpp  applet.h  checklist_item.cpp  conf_dialog.cpp  feature_manager.cpp  feature_manager.h  flowlayout.cpp  flowlayout.h  ksmallslider.h  lapsus_conf.cpp  lapsus_conf.h  lapsus_dbus.cpp  lapsus_dbus.h  lapsus_feature.h  lapsus_icons.cpp  lapsus_icons.h  lapsus_slider.cpp  lapsus_slider.h  lapsus_switch.cpp  lapsus_switch.h  lapsus_vol_slider.cpp  lapsus_vol_slider.h  lapsusapplet.desktop  list_item.cpp  list_item.h  osd.cpp  osd.h  panel_button.h  panel_default.cpp  panel_default.h  panel_main.cpp  panel_main.h  panel_slider.cpp  panel_slider.h  panel_vol_slider.cpp  panel_vol_slider.h  panel_widget.cpp  panel_widget.h
tags/0.0.6/daemon/: acpi_event_parser.cpp  acpi_event_parser.h  alsa_mixer.cpp  alsa_mixer.h  lapsus_config.cpp  lapsus_config.h  lapsus_daemon.cpp  lapsus_daemon.h  lapsus_dbus.cpp  lapsus_dbus.h  lapsus_mixer.cpp  lapsus_mixer.h  lapsus_module.cpp  lapsus_save.cpp  lapsus_save.h  lapsus_signal.cpp  lapsus_signal.h  main.cpp  modules_list.cpp  modules_list.h  synaptics.cpp  synaptics.h  sys_asus.cpp  sys_asus.h  sys_backend.cpp  sys_backend.h  sys_ibm.cpp  sys_ibm.h
tags/0.0.6/dbus-qt4-qt3backport/: Makefile.am
tags/0.0.6/global/: lapsus.h  lapsus_validator.cpp  lapsus_validator.h
tags/0.0.6/po/: Makefile.am  de.po
trunk/: ChangeLog  INSTALL  Makefile.am  README  TODO  configure.in.in  lapsus.conf
trunk/client/: Makefile.am  action_button.cpp  action_button.h  applet.cpp  applet.h  applet_conf.h  checklist_item.cpp  checklist_item.h  conf_base.ui  conf_dialog.cpp  conf_dialog.h  feature_manager.cpp  feature_manager.h  ksmallslider.cpp  lapsus_conf.cpp  lapsus_conf.h  lapsus_dbus.cpp  lapsus_dbus.h  lapsus_feature.cpp  lapsus_feature.h  lapsus_icons.cpp  lapsus_icons.h  lapsus_slider.cpp  lapsus_slider.h  lapsus_switch.cpp  lapsus_switch.h  lapsus_vol_slider.cpp  lapsus_vol_slider.h  ldbus.h  list_item.h  listbox_feature.cpp  listbox_feature.h  listbox_slider.cpp  listbox_slider.h  listbox_switch.cpp  listbox_switch.h  listbox_vol_slider.cpp  listbox_vol_slider.h  osd.cpp  osd.h  (+13 more)
trunk/client/pics/: Makefile.am
trunk/daemon/: Makefile.am  alsa_mixer.cpp  alsa_mixer.h  lapsus_config.cpp  lapsus_config.h  lapsus_daemon.cpp  lapsus_daemon.h  lapsus_dbus.cpp  lapsus_dbus.h  lapsus_init.cpp  lapsus_init.h  lapsus_mixer.cpp  lapsus_mixer.h  lapsus_module.cpp  lapsus_module.h  lapsus_save.cpp  lapsus_signal.cpp  lapsus_signal.h  main.cpp  modules_list.cpp  modules_list.h  synaptics.cpp  synaptics.h  sys_asus.cpp  sys_asus.h  sys_backend.cpp  sys_backend.h  sys_generic.cpp  sys_generic.h  sys_ibm.cpp  sys_ibm.h
trunk/dbus-qt4-qt3backport/: Makefile.am  qdbusconnection.cpp  qdbusdata.cpp  qdbusdatalist.cpp  qdbusmarshall.cpp
trunk/dbus-qt4-qt3backport/dbus/: qdbusconnection.h  qdbusdata.h  qdbusdatalist.h  qdbusdatamap.h  qdbuserror.h  qdbusmessage.h  qdbusobject.h  qdbusproxy.h
trunk/global/: lapsus.h  lapsus_validator.cpp  lapsus_validator.h  regen
trunk/po/: pl.po
